Real Change from Nothing
to Main FoodGO page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,55 @@
+
+
+
 <!DOCTYPE html>
 <html>
+<title>foodGO</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" type="text/css" href="./foodgo.css">
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>Testing adding new lines with Atom.</p>
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card-5" style="letter-spacing:5px;">
+    <a href="#home" class="w3-bar-item w3-button">foodGO: An Online Food Delivery Service</a>
+    <!-- Right-sided navbar links. Hide them on small screens
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+    </div>-->
+  </div>
+</div>
+<div class="w3-display-middle">
+
+    <h1 class="w3-jumbo w3-animate-top">Explore your campus</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center">CSUB |  Bakersfield College</p>
+
+  <div class="container">
+
+  	<center>
+  	<img src="csub.png" class ="w3-hover-grayscale" style ="width:150px">
+
+
+
+  	<img src="bc.jpg" class ="w3-hover-grayscale" style ="width:150px">
+ 	</center>
+
+  	</div>
+
+
+
+  </div>
+ <!-- <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  </div>-->
+</div>
+
 </body>
 </html>
