--- a/BC.html
+++ b/BC.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>Testing adding new lines with Atom.</p>
+<p>Testing adding new lineis with Atom.
+Are we still reading BC file? </p>
 </body>
 </html>
