--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" type="text/css" href="foodgo.css">
+<link rel="stylesheet" type="text/css" href="./foodgo.css">
 
 <body>
 
@@ -34,10 +34,9 @@
   <div class="container">
 
   	<center>
+      <A HREF="http://www.google.com">
   	<img src="csub.png" class ="w3-hover-grayscale" style ="width:150px">
-
-
-
+    </A>
   	<img src="bc.jpg" class ="w3-hover-grayscale" style ="width:150px">
  	</center>
 
