--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
   <div class="container">
 
   	<center>
-      <A HREF="http://www.google.com">
+    <A HREF="http://www.google.com">
   	<img src="csub.png" class ="w3-hover-grayscale" style ="width:150px">
     </A>
+
+    <A HREF="http://www.google.com">
   	<img src="bc.jpg" class ="w3-hover-grayscale" style ="width:150px">
- 	</center>
+    </A>
+    </center>
+
+    <!-- link to Old Group Project -->
+    <p>Was in a Group, we since disbanded. You can read about it here:
+      <a href="http://cs.csub.edu/~arojas/3480/links/group.html">Group turned Solo</a></p>
 
   	</div>
 
