--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- link to Old Group Project -->
     <p>Was in a Group, we since disbanded. You can read about it here:
-      <a href="http://cs.csub.edu/~arojas/3480/links/group.html">Group turned Solo</a></p>
+      <a href="http://www.github.com/Angel-Rojas/hello-world.html">Bakersfield College Webpage</a></p>
 
   	</div>
 
