--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- link to Old Group Project -->
     <p>Was in a Group, we since disbanded. You can read about it here:
-      <a href="http://www.Angel-Rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
+      <a href="http://www.angel-rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
 
   	</div>
 
