Changes to Linkis

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
   	<center>
     <A HREF="http://www.google.com">
-  	<img src="csub.png" class ="w3-hover-grayscale" style ="width:150px">
+  	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/csubicon.png" class ="w3-hover-grayscale" style ="width:150px">
     </A>
 
-    <A HREF="http://www.google.com">
-  	<img src="bc.jpg" class ="w3-hover-grayscale" style ="width:150px">
+    <A HREF="http://www.angel-rojas.github.io/angelsBCpage.github.io">
+  	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/bcicon.jpg" class ="w3-hover-grayscale" style ="width:150px">
     </A>
     </center>
 
