FINALLY Fixed the link
The issue was leaving out "s" from "https"

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/csubicon.png" class ="w3-hover-grayscale" style ="width:150px">
     </A>
 
-    <A HREF="http://www.angel-rojas.github.io/angelsBCpage.github.io">
+    <A HREF="https://angel-rojas.github.io/angelsBCpage.github.io/">
   	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/bcicon.jpg" class ="w3-hover-grayscale" style ="width:150px">
     </A>
     </center>
 
     <!-- link to Old Group Project -->
-    <p>Was in a Group, we since disbanded. You can read about it here:
+    <p>testing a link
       <a href="http://www.angel-rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
 
   	</div>
