--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- link to Old Group Project -->
     <p>testing a link
-      <a href="http://www.angel-rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
+      <a href="https://www.angel-rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
 
   	</div>
 
