--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" type="text/css" href="https://github.com/Angel-Rojas/Angel-Rojas.github.io/blob/master/foodgo.css">
+<link rel="stylesheet" type="text/css" href="/foodgo.css">
 
 <body>
 
@@ -45,7 +45,7 @@
 
     <!-- link to Old Group Project -->
     <p>testing a link
-      <a href="https://www.angel-rojas.github.io/angelsBCpage.github.io">Bakersfield College Webpage</a></p>
+      <a href="https://angel-rojas.github.io/angelsBCpage.github.io/">Bakersfield College Webpage</a></p>
 
   	</div>
 
