--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="container">
 
   	<center>
-    <A HREF="http://www.google.com">
+    <A HREF="https://angel-rojas.github.io/csubfoodgopage.github.io/">
   	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/csubicon.png" class ="w3-hover-grayscale" style ="width:150px">
     </A>
 
