Added words to Main Page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     </center>
 
     <!-- link to Old Group Project -->
-    <p>testing a link
-      <a href="https://angel-rojas.github.io/angelsBCpage.github.io/">Bakersfield College Webpage</a></p>
+    <h1>
+      About Us!</h1>
+    <p> We are a Food Delivery service coming to a Campus near you! Our goals is
+      to make getting food easier and more efficient.
+      </p>
 
   	</div>
 
