added back color

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <!-- link to Old Group Project -->
     <h1>
       About Us!</h1>
-    <p> We are a Food Delivery service coming to a Campus near you! Our goals is
+    <h1 style="background-color:DodgerBlue;">DodgerBlue<p> We are a Food Delivery service coming to a Campus near you! Our goals is
       to make getting food easier and more efficient.
-      </p>
+    </p> <h1>
 
   	</div>
 
