--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
     </A>
     </center>
 
-    <!-- link to Old Group Project -->
-    <h1>
+
+    <h1 style="background-color:DodgerBlue;">
       About Us!</h1>
-    <h1 style="background-color:DodgerBlue;">DodgerBlue<p> We are a Food Delivery service coming to a Campus near you! Our goals is
-      to make getting food easier and more efficient.
-    </p> <h1>
+    <p> We are a Food Delivery service coming to a Campus near you! Our goals is
+      to make getting food easier and more efficient.</p>
 
   	</div>
 
