--- a/index.html
+++ b/index.html
@@ -1,62 +1,38 @@
-
-
-
+<!-- Filename: index.html-->
 <!DOCTYPE html>
-<html>
-<title>foodGO</title>
-<meta charset="UTF-8">
+<html lang="en">
+<title>Angel Resume</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" type="text/css" href="foodgo.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card-5" style="letter-spacing:5px;">
-    <a href="#home" class="w3-bar-item w3-button">foodGO: An Online Food Delivery Service</a>
-    <!-- Right-sided navbar links. Hide them on small screens
-    <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#menu" class="w3-bar-item w3-button">Menu</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>-->
+<div class="jumbotron text-center">
+<h1>My First Bootstrap Page</h1>
+<p>Resize this responsive page to see the effect!</p>
+</div>
+
+<div class="container">
+<div class="row">
+  <div class="col-sm-4">
+    <h3>Column 1</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+  </div>
+  <div class="col-sm-4">
+    <h3>Column 2</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+  </div>
+  <div class="col-sm-4">
+    <h3>Column 3</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
   </div>
 </div>
-<div class="w3-display-middle">
-
-    <h1 class="w3-jumbo w3-animate-top">Explore your campus</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">CSUB |  Bakersfield College</p>
-
-  <div class="container">
-
-  	<center>
-    <A HREF="https://angel-rojas.github.io/csubfoodgopage.github.io/">
-  	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/csubicon.png" class ="w3-hover-grayscale" style ="width:150px">
-    </A>
-
-    <A HREF="https://angel-rojas.github.io/angelsBCpage.github.io/">
-  	<img src="https://www.cs.csub.edu/~arojas/cmps4910/images/bclogo.png" class ="w3-hover-grayscale" style ="width:150px">
-    </A>
-    </center>
-
-
-    <h1 style="background-color:DodgerBlue;">
-      About Us!</h1>
-    <p> We are a Food Delivery service coming to a Campus near you! Our goals is
-      to make getting food easier and more efficient.</p>
-
-  	</div>
-
-
-
-  </div>
- <!-- <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div>-->
 </div>
 
 </body>
