--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
+<div id="wrapper">
 <div class="jumbotron text-center">
 <h1>My First Bootstrap Page</h1>
 <p>Resize this responsive page to see the effect!</p>
@@ -34,6 +36,7 @@
   </div>
 </div>
 </div>
+</div> <!-- End of Wrapper-->
 
 </body>
 </html>
