--- a/index.html
+++ b/index.html
@@ -14,24 +14,13 @@
 <div id="wrapper">
 
 <div class="container">
-<div class="row">
-  <div class="col-md-6">
-    <h3> Test</h3>
-  </div>
-
-  <div class="col-sm-4">
-    <h3>Column 2</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-  </div>
-  <div class="col-sm-4">
-    <h3>Column 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-  </div>
+  <div class="row">
+    <div class="col-sm-2" style="background-color:lavender;">.col-sm-2</div>
+    <div class="col-md-6" style="background-color:lavenderblush;">.col-md-6</div>
+  </div> <!-- End row-->
 </div>
 </div>
-</div> <!-- End of Wrapper-->
+</div> <!-- End of wrapper-->
 
 </body>
 </html>
