--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <div id="wrapper">
 
-<div class="container">
+<!--<div class="container"> -->
   <div class="row">
-    <div class="col-sm-2" style="background-color:lavender;">.col-sm-2</div>
-    <div class="col-md-6" style="background-color:lavenderblush;">.col-md-6</div>
+    <div class="col-md-4" style="background-color:lavender;">.col-sm-2</div>
+    <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6</div>
   </div> <!-- End row-->
 </div>
-</div>
+<!--</div> -->
 </div> <!-- End of wrapper-->
 
 </body>
