--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
 
 <!--<div class="container"> -->
   <div class="row">
-    <div class="col-md-4" style="background-color:lavender;">.col-sm-2</div>
-    <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6</div>
+    <div class="col-md-4" style="background-color:lavender;">.col-sm-2
+      <h2>Circle</h2>
+<p>The .img-circle class shapes the image to a circle (not available in IE8):</p>
+<img src="cinqueterre.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+
+    </div>
+    <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6
+
+
+    </div>
   </div> <!-- End row-->
 </div>
 <!--</div> -->
