more format for Navbar

--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
 <!--<div class="container"> -->
   <div class="row">
-    <div class="col-md-4" style="background-color:lavender;">.col-sm-2
-      <h2>Circle</h2>
-<p>The .img-circle class shapes the image to a circle (not available in IE8):</p>
-<img src="cinqueterre.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
-
+    <div class="col-md-4" style="background-color:lavender;">
+      <div class="container">
+      <img src="me.jpeg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+      <h2>Angel Rojas</h2>
+      <p>CSUB Comp. Science Graduate</p>
+      </div>
+      <div class="container">
+        <ul>
+        </li class=""> </li>
+        </ul>
+      </div>
     </div>
     <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6
 
