--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--<div class="container"> -->
   <div class="row">
     <div class="col-md-4" style="background-color:lavender;">
-      <div class="container">
+      <div class="text-center">
       <img src="./imgs/me.jpeg" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2>Angel Rojas</h2>
       <p>CSUB Comp. Science Graduate</p>
