--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
   <div class="row">
     <div class="col-md-4" style="background-color:lavender;">
       <div class="text-center">
-      <img src="./imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2>Angel Rojas</h2>
       <p>CSUB Comp. Science Graduate</p>
       </div>
-      <div class="container">
+      <nav class="nav">
         <ul>
-        </li class=""> </li>
+        </li class="active">About</li>
+        </li class="">Education</li>
+        </li class="">Experience</li>
+        </li class="">Fundamentals</li>
+        </li class="">Projects</li>
+
         </ul>
-      </div>
+      </nav>
     </div>
     <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6
 
