--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <div class="text-center">
       <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2>Angel Rojas</h2>
-      <p>CSUB Comp. Science Graduate</p>
+      <p id="nav">CSUB Comp. Science Graduate</p>
       </div>
       <nav class="nav">
-        <ul>
-        </li class="active">About</li>
-        </li class="">Education</li>
-        </li class="">Experience</li>
-        </li class="">Fundamentals</li>
-        </li class="">Projects</li>
+       <ul>
+        <li class="active">About</li>
+        <li class="">Education</li>
+        <li class="">Experience</li>
+        <li class="">Fundamentals</li>
+        <li class="">Projects</li>
 
-        </ul>
+       </ul>
       </nav>
     </div>
     <div class="col-md-8" style="background-color:lavenderblush;">.col-md-6
