--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <!--<div class="container"> -->
   <div class="row">
-    <div class="col-md-4" style="background-color:lavender;">
+    <div class="col-md-4" style="background-color:rgb(242, 243, 247);">
       <div class="text-center">
-      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
-      <h2>Angel Rojas</h2>
+      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175">
+      <h2 id="name">Angel Rojas</h2>
       <p id="nav">CSUB Comp. Science Graduate</p>
       </div>
       <nav class="nav">
