--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p id="nav">CSUB Comp. Science Graduate</p>
       </div>
       <nav class="nav">
-       <ul>
+       <ul id="nav">
         <li class="active">About</li>
         <li class="">Education</li>
         <li class="">Experience</li>
