--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- For columns, max space allowed is 12-->
     <div class="col-md-3" style="background-color:rgb(242, 243, 247);">
       <div class="text-center">
-      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 20px;">
+      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
       <h2 id="name">Angel Rojas</h2>
       <p id="nav">CSUB Comp. Science Graduate</p>
       </div>
@@ -33,7 +33,7 @@
        </ul>
       </nav>
     </div>
-    <div class="col-md-7" style="background-color:lavenderblush;">.col-md-6
+    <div class="col-md-7" style="background-color:lavenderblush;">
 
 
     </div>
