--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
       </nav>
     </div>
     <div class="col-md-7" style="background-color:lavenderblush;">
-
+      <div>
+        <span class="heading-meta"> About Me </span>
+        <h2 class="">Aspiring Programmer</h2>
+        <h3 class="">Bakersfield, CA 93313</h3>
+        <p><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
+        California State University, Bakersfield with the a Bachelors
+      of Science degree in Computer Science Traditional. I graduated with a 3.18 gpa
+    and have learned so much in my journey. </p>
+      </div>
 
     </div>
   </div> <!-- End row-->
