--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
        </ul>
       </nav>
     </div>
-    <div class="col-md-7" style="background-color:lavenderblush; padding: 2em 0px 0px 2em;">
+    <div class="col-md-7" style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
       <div>
         <span class="heading-meta"> About Me </span>
-        <h2 class="about">Aspiring Programmer</h2>
-        <h3 class="about">Bakersfield, CA 93313</h3>
+        <h2 class="about">Aspiring Programmer
+        <h3 class="about" style="font-size: 12px">Bakersfield, CA 93313</h3></h2>
         <p><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
         California State University, Bakersfield with the a Bachelors
       of Science degree in Computer Science Traditional. I graduated with a 3.18 gpa
