--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="heading-meta"> About Me </span>
         <h2 class="about">Aspiring Programmer
         <h3 class="about" style="font-size: 12px">Bakersfield, CA 93313</h3></h2>
-        <p><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
+        <p id="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
         California State University, Bakersfield with the a Bachelors
       of Science degree in Computer Science Traditional. I graduated with a 3.18 gpa
     and have learned so much in my journey. </p>
