--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </div>
     <div class="col-md-7" style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
       <div>
-        <span class="heading-meta"> About Me </span>
-        <h2 class="about">Aspiring Programmer
-        <h3 class="about" style="font-size: 12px">Bakersfield, CA 93313</h3></h2>
+        <span class="heading"> About Me </span>
+        <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
+        <h3 class="about" style="font-size: 12px;">Bakersfield, CA 93313</h3>
         <p id="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
         California State University, Bakersfield with the a Bachelors
       of Science degree in Computer Science Traditional. I graduated with a 3.18 gpa
