--- a/index.html
+++ b/index.html
@@ -24,24 +24,27 @@
       </div>
       <nav class="nav">
        <ul id="nav">
-        <li class="active">About</li>
-        <li class="">Education</li>
-        <li class="">Experience</li>
-        <li class="">Fundamentals</li>
-        <li class="">Projects</li>
+        <li class="active"><a href="#About" class="active">About</a></li>
+        <li class=""><a href="#Education" class="">Education</a></li>
+        <li class=""><a href="#Experience" class="">Experience</a></li>
+        <li class=""><a href="#Fundamentals" class="">Fundamentals</a></li>
+        <li class=""><a href="#Projects" class="">Projects</a></li>
 
        </ul>
       </nav>
     </div>
     <div class="col-md-7" style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
-      <div>
+      <div id="About">
         <span class="heading"> About Me </span>
         <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
         <h3 class="about" style="font-size: 12px;">Bakersfield, CA 93313</h3>
-        <p id="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from the college of
-        California State University, Bakersfield with the a Bachelors
-      of Science degree in Computer Science Traditional. I graduated with a 3.18 gpa
-    and have learned so much in my journey. </p>
+        <p id="About" class="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from
+        California State University, Bakersfield with a Bachelors
+      of Science degree in Computer Science Traditional. I graduated with a 3.18 GPA
+    and enjoy learning new things everyday. </p>
+      </div>
+      <div id="#Education">
+
       </div>
 
     </div>
