nav fix ScrollSpy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
 <div id="wrapper">
 
@@ -22,7 +22,7 @@
       <h2 id="name">Angel Rojas</h2>
       <p id="nav">CSUB Comp. Science Graduate</p>
       </div>
-      <nav class="nav">
+      <nav class="nav" id="myScrollspy">
        <ul id="nav">
         <li class="active"><a href="#About" class="active">About</a></li>
         <li class=""><a href="#Education" class="">Education</a></li>
@@ -34,11 +34,11 @@
       </nav>
     </div>
     <div class="col-md-7" style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
-      <div id="About">
+      <div id="">
         <span class="heading"> About Me </span>
         <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
         <h3 class="about" style="font-size: 12px;">Bakersfield, CA 93313</h3>
-        <p id="About" class="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from
+        <p id="" class="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from
         California State University, Bakersfield with a Bachelors
       of Science degree in Computer Science Traditional. I graduated with a 3.18 GPA
     and enjoy learning new things everyday. </p>
