--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
 <div id="wrapper">
-
 <!--<div class="container"> -->
   <div class="row">
     <!-- For columns, max space allowed is 12-->
@@ -29,7 +28,6 @@
         <li class=""><a href="#Experience" class="">Experience</a></li>
         <li class=""><a href="#Fundamentals" class="">Fundamentals</a></li>
         <li class=""><a href="#Projects" class="">Projects</a></li>
-
        </ul>
       </nav>
     </div>
@@ -43,7 +41,20 @@
       of Science degree in Computer Science Traditional. I graduated with a 3.18 GPA
     and enjoy learning new things everyday. </p>
       </div>
-      <div id="#Education">
+      <div id="Education">
+
+        <div id="Experience">
+          <h1>Section 1</h1>
+          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        </div>
+        <div id="Fundamentals">
+          <h1>Section 2</h1>
+          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        </div>
+        <div id="Projects">
+          <h1>Section 3</h1>
+          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+        </div>
 
       </div>
 
