--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
-<div id="wrapper">
+<div id="wrapper" class="col-sm-9">
 <!--<div class="container"> -->
   <div class="row">
     <!-- For columns, max space allowed is 12-->
