--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
-<div id="wrapper" class="col-sm-9">
+<div id="wrapper">
 <!--<div class="container"> -->
   <div class="row">
     <!-- For columns, max space allowed is 12-->
@@ -31,7 +31,7 @@
        </ul>
       </nav>
     </div>
-    <div class="col-md-7" style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
+    <div class="col-md-7" /*class="col-md-7"*/ style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
       <div id="">
         <span class="heading"> About Me </span>
         <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
@@ -43,21 +43,20 @@
       </div>
       <div id="Education">
 
-        <div id="Experience">
-          <h1>Section 1</h1>
-          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-        </div>
-        <div id="Fundamentals">
-          <h1>Section 2</h1>
-          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-        </div>
-        <div id="Projects">
-          <h1>Section 3</h1>
-          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-        </div>
-
+        
       </div>
-
+      <div id="Experience">
+        <h1>Section 1</h1>
+        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+      </div>
+      <div id="Fundamentals">
+        <h1>Section 2</h1>
+        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+      </div>
+      <div id="Projects">
+        <h1>Section 3</h1>
+        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+      </div>
     </div>
   </div> <!-- End row-->
 </div>
