--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!--<div class="container"> -->
   <div class="row">
     <!-- For columns, max space allowed is 12-->
+    <div>
     <div class="col-md-3" style="background-color:rgb(242, 243, 247);">
       <div class="text-center">
       <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
@@ -31,6 +32,7 @@
        </ul>
       </nav>
       </div>
+    </div>
     </div>
     <div class="col-md-7" /*class="col-md-7"*/ style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
       <div id="">
