--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+body {
+  position: relative;
+}
+ul.nav-pills {
+  top: 20px;
+  position: fixed;
+}
+div.col-sm-9 div {
+  height: 250px;
+  font-size: 28px;
+}
+#section1 {color: #fff; background-color: #1E88E5;}
+#section2 {color: #fff; background-color: #673ab7;}
+#section3 {color: #fff; background-color: #ff9800;}
+#section41 {color: #fff; background-color: #00bcd4;}
+#section42 {color: #fff; background-color: #009688;}
+
+@media screen and (max-width: 810px) {
+  #section1, #section2, #section3, #section41, #section42  {
+    margin-left: 150px;
+  }
+}
+</style>
 </head>
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-
-<div id="wrapper">
 
   <div class="container">
     <div class="row">
@@ -55,7 +77,7 @@
   </div>
 
 
-
+<div id="wrapper">
 <!--<div class="container"> -->
   <div class="row">
     <!-- For columns, max space allowed is 12-->
