--- a/index.html
+++ b/index.html
@@ -35,46 +35,50 @@ div.col-sm-9 div {
 </head>
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
-  <div class="container">
+  <div class="container" style="width: 80%;">
     <div class="row">
       <nav class="col-sm-3" id="myScrollspy">
         <ul class="nav nav-pills nav-stacked">
-          <li class="active"><a href="#section1">Section 1</a></li>
-          <li><a href="#section2">Section 2</a></li>
-          <li><a href="#section3">Section 3</a></li>
+          <li class="active"><a href="#Aboutme">Aboutme/a></li>
+          <li><a href="#Education">Education</a></li>
+          <li><a href="#Experience">Experience</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#section41">Section 4-1</a></li>
-              <li><a href="#section42">Section 4-2</a></li>
+              <li><a href="#Fundamentals">Fundamentals</a></li>
+              <li><a href="#Projects">Projects</a></li>
             </ul>
           </li>
         </ul>
       </nav>
-      <div class="col-sm-9">
-        <div id="section1">
+      <div class="col-md-7" /*class="col-md-7"*/ style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
+        <div id="Aboutme">
+          <span class="heading"> About Me </span>
+          <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
+          <h3 class="about" style="font-size: 12px;">Bakersfield, CA 93313</h3>
+          <p id="" class="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from
+          California State University, Bakersfield with a Bachelors
+        of Science degree in Computer Science Traditional. I graduated with a 3.18 GPA
+      and enjoy learning new things everyday. </p>
+        </div>
+        <div id="Education">
+
+        </div>
+        <div id="Experience">
           <h1>Section 1</h1>
           <p>Try to scroll this section and look at the navigation list while scrolling!</p>
         </div>
-        <div id="section2">
+        <div id="Fundamentals">
           <h1>Section 2</h1>
           <p>Try to scroll this section and look at the navigation list while scrolling!</p>
         </div>
-        <div id="section3">
+        <div id="Projects">
           <h1>Section 3</h1>
           <p>Try to scroll this section and look at the navigation list while scrolling!</p>
         </div>
-        <div id="section41">
-          <h1>Section 4-1</h1>
-          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-        </div>
-        <div id="section42">
-          <h1>Section 4-2</h1>
-          <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-        </div>
       </div>
-    </div>
-  </div>
+    </div> <!-- row -->
+  </div> <!-- container -->
 
 
 <div id="wrapper">
@@ -127,7 +131,6 @@ div.col-sm-9 div {
       </div>
     </div>
   </div> <!-- End row-->
-</div>
 <!--</div> -->
 </div> <!-- End of wrapper-->
 
