--- a/index.html
+++ b/index.html
@@ -37,9 +37,28 @@ div.col-sm-9 div {
 
   <div class="container" style="width: 80%;">
     <div class="row">
-      <nav class="col-sm-3" id="myScrollspy">
+      <nav class="col-sm-3" id="myScrollspy" style="background-color:rgb(242, 243, 247);">
         <ul class="nav nav-pills nav-stacked">
-          <li class="active"><a href="#Aboutme">Aboutme/a></li>
+
+          <!--<div class="col-md-3" style="background-color:rgb(242, 243, 247);">-->
+            <!--<div class="text-center -->
+            <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
+            <h2 id="name">Angel Rojas</h2>
+            <p id="nav">CSUB Comp. Science Graduate</p>
+
+            <!--<nav class="nav" id="myScrollspy"> -->
+             <ul id="nav">
+              <li class="active"><a href="#About" class="active">About</a></li>
+              <li class=""><a href="#Education" class="">Education</a></li>
+              <li class=""><a href="#Experience" class="">Experience</a></li>
+              <li class=""><a href="#Fundamentals" class="">Fundamentals</a></li>
+              <li class=""><a href="#Projects" class="">Projects</a></li>
+             </ul>
+           <!--</nav> -->
+         <!-- </div> -->
+          <!--</div> -->
+
+          <li class="active"><a href="#Aboutme">Aboutme</a></li>
           <li><a href="#Education">Education</a></li>
           <li><a href="#Experience">Experience</a></li>
           <li class="dropdown">
