--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ div.col-sm-9 div {
       <nav class="col-sm-3" id="myScrollspy" style="background-color:rgb(242, 243, 247);">
         <ul class="nav nav-pills nav-stacked">
 
-          <!--<div class="col-md-3" style="background-color:rgb(242, 243, 247);">-->
-            <!--<div class="text-center -->
+          <div class="col-md-3" style="background-color:rgb(242, 243, 247);">
+            <div class="text-center">
             <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
             <h2 id="name">Angel Rojas</h2>
             <p id="nav">CSUB Comp. Science Graduate</p>
@@ -55,8 +55,8 @@ div.col-sm-9 div {
               <li class=""><a href="#Projects" class="">Projects</a></li>
              </ul>
            <!--</nav> -->
-         <!-- </div> -->
-          <!--</div> -->
+          </div>
+          </div>
 
           <li class="active"><a href="#Aboutme">Aboutme</a></li>
           <li><a href="#Education">Education</a></li>
