--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@ div.col-sm-9 div {
 </head>
 <body id="About" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 
-  <div class="container" style="width: 80%;">
+  <div class="container" style="width: 80%; max-width: 80%;">
     <div class="row">
       <nav class="col-sm-3" id="myScrollspy" style="background-color:rgb(242, 243, 247);">
         <ul class="nav nav-pills nav-stacked">
 
-          <div class="col-md-3" style="background-color:rgb(242, 243, 247);">
             <div class="text-center">
             <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
             <h2 id="name">Angel Rojas</h2>
@@ -55,7 +54,7 @@ div.col-sm-9 div {
               <li class=""><a href="#Projects" class="">Projects</a></li>
              </ul>
            <!--</nav> -->
-          </div>
+
           </div>
 
           <li class="active"><a href="#Aboutme">Aboutme</a></li>
