--- a/index.html
+++ b/index.html
@@ -105,59 +105,9 @@ div.col-sm-9 div {
     </div> <!-- row -->
   </div> <!-- container -->
 
-
-<div id="wrapper">
-<!--<div class="container"> -->
-  <div class="row">
-    <!-- For columns, max space allowed is 12-->
-    <div>
-    <div class="col-md-3" style="background-color:rgb(242, 243, 247);">
-      <div class="text-center">
-      <img src="/imgs/me.jpg" class="img-circle" alt="Cinque Terre" width="150" height="175" style="margin-top: 25px;">
-      <h2 id="name">Angel Rojas</h2>
-      <p id="nav">CSUB Comp. Science Graduate</p>
-
-      <nav class="nav" id="myScrollspy">
-       <ul id="nav">
-        <li class="active"><a href="#About" class="active">About</a></li>
-        <li class=""><a href="#Education" class="">Education</a></li>
-        <li class=""><a href="#Experience" class="">Experience</a></li>
-        <li class=""><a href="#Fundamentals" class="">Fundamentals</a></li>
-        <li class=""><a href="#Projects" class="">Projects</a></li>
-       </ul>
-      </nav>
-      </div>
-    </div>
-    </div>
-    <div class="col-md-7" /*class="col-md-7"*/ style="background-color:lavenderblush; padding: 4em 0px 0px 3em;">
-      <div id="">
-        <span class="heading"> About Me </span>
-        <h2 class="about" style="margin-bottom: 0px;">Aspiring Programmer</h2>
-        <h3 class="about" style="font-size: 12px;">Bakersfield, CA 93313</h3>
-        <p id="" class="desc"><strong>Hi, I'm Angel.</strong> I am a graduate from
-        California State University, Bakersfield with a Bachelors
-      of Science degree in Computer Science Traditional. I graduated with a 3.18 GPA
-    and enjoy learning new things everyday. </p>
-      </div>
-      <div id="Education">
-
-      </div>
-      <div id="Experience">
-        <h1>Section 1</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-      <div id="Fundamentals">
-        <h1>Section 2</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-      <div id="Projects">
-        <h1>Section 3</h1>
-        <p>Try to scroll this section and look at the navigation list while scrolling!</p>
-      </div>
-    </div>
-  </div> <!-- End row-->
-<!--</div> -->
-</div> <!-- End of wrapper-->
+<!-- color is  background-color:rgb(242, 243, 247);   -->
+<!--<div id="wrapper">
+</div>--> <!-- End of wrapper-->
 
 </body>
 </html>
